--- a/fightinggame.html
+++ b/fightinggame.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -41,6 +36,11 @@
                 <header class="major">
                     <h2>⚔️ Turn-Based Fighting Game</h2>
                 </header>
+                <section>
+                    <h3>Inspiration</h3>
+                    I'm a big fan of turn-based games where you have to think several steps ahead of your opponent. I
+                    decided to build this engine after completing my functional programming course in college.
+                </section>
             </div>
         </div>
 
