Add slides and some content

--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
 							onclick="toggleAccordion(event)">
 							👋 Who Am I</h3>
 						<div class="accordion-content active">
-							<b>Hi! My name is Robert Zhao, and I currently study Computer Science with a side
-								concentration in Applied Engineering Physics at Cornell University's College of
-								Engineering. My graduation class is going to be the Class of 2023.</b>
+							<b>Hi! My name is Robert Zhao, and I am a 3rd year senior studying Computer Science at
+								Cornell University's College of
+								Engineering. I enjoy solving real-world problems using programming. </b>
 						</div>
 					</div>
 					<div class="accordion-item" id="career">
@@ -62,12 +62,14 @@
 											fill="url(#a)" />
 									</svg></div> 6/2021 ➡️ 8/2021
 							</h4>
-							<b>In my first summer internship at Tinder, I rebuilt the Open Source Software Screen using
-								Jetpack
-								Compose. This was part of a larger <a
-									href="https://medium.com/tinder/sparking-jetpack-compose-at-tinder-8f15d77eb4da"
-									target="_blank">initiative</a>
-								to migrate the Tinder Android app from legacy Android views to Jetpack Compose.</b>
+							<p><b>In my first summer internship at Tinder, I rebuilt the Open Source Software Screen
+									using
+									Jetpack
+									Compose. This was part of a larger <a
+										href="https://medium.com/tinder/sparking-jetpack-compose-at-tinder-8f15d77eb4da"
+										target="_blank">initiative</a>
+									to migrate the Tinder Android app from legacy Android views to Jetpack Compose.</b>
+							</p>
 							<h4>
 								<div class="company-logo"><svg viewBox="0 -0.060000000000000005 35 40.3"
 										xmlns="http://www.w3.org/2000/svg" width="2168" height="2500">
@@ -80,7 +82,9 @@
 											fill="url(#a)" />
 									</svg></div> 5/2022 ➡️ 9/2022
 							</h4>
-							<b>In my second summer internship at Tinder, I worked on 2 main projects.</b>
+							<p><b>In my second summer internship at Tinder, I worked on 2 projects: Adopting Jetpack
+									Compose into our Design System (Obsidian) and Rebuilding the Explore Page using
+									Compose.</b></p>
 							<h4>
 								<div class="company-logo"><svg xmlns="http://www.w3.org/2000/svg" width="200pt"
 										height="200pt" viewBox="0 0 200 200">
@@ -193,7 +197,8 @@
 									</svg></div> 6/2023 ➡️ present
 							</h4>
 							<p>
-
+								<b>At Nine Hill, I worked on network infrastructure for their Rust
+									video-sharing platform.</b>
 							</p>
 						</div>
 					</div>
@@ -201,65 +206,54 @@
 						<h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
 							✨ Interests</h3>
 						<div class="accordion-content">
-							<b>Here are my main interests in the tech stack.</b>
+							<h4>Analytics</h4>
+							<p><b>My dream job would be to work in the analytics department of a company, ideally a
+									sports team.</b></p>
+							<h4>Android</h4>
+							<p><b>My first ever software engineering gig was doing Android development for a large-scale
+									mobile app used by millions around the world. I have nearly 1 year of
+									experience.</b></p>
+						</div>
+					</div>
+					<div class="accordion-item" id="opinions">
+						<h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
+							⚖️ Evaluating Each Skill</h3>
+						<div class="accordion-content">
+							<p><b>With professional and personal experience with these languages, I wanted to provide
+									some
+									thoughts on what I found good and bad about these languages. It's important that I
+									have
+									not used all of these languages to their absolute limit, so these are only my
+									opinion
+									based on projects I've built using them.</b></p>
+							<h4>Kotlin</h4>
+							<p><b>I've mainly used Kotlin while doing Android development, but I'm aware that it is far
+									more powerful than that. I really like its numerous features that make it more
+									readable and type-safe.</b></p>
+							<h4>Java</h4>
+							<b></b>
+							<h4>Rust</h4>
+							<b></b>
+							<h4>OCaml</h4>
+							<b></b>
+							<h4>Python</h4>
+							<b></b>
+							<center><iframe
+									src="https://docs.google.com/presentation/d/e/2PACX-1vQ1M-6Hx_9Edva6nfgN7aPGXoqCsblsKWbiS-axac66UDCQGHjWszjIohfXbfsXi7lPu4wsXBxVK4xp/embed?start=true&loop=true&delayms=3000"
+									frameborder="0" width="100%" allowfullscreen="true" mozallowfullscreen="true"
+									webkitallowfullscreen="true"></iframe></center>
 						</div>
 					</div>
 				</div>
 
-				<section>
-					<h3>Who am I?</h3>
-					<p>Hi! My name is <b>Robert Zhao</b>, and I currently study <strong>Computer Science</strong> with a
-						side
-						concentration in
-						Applied Engineering Physics at <strong>Cornell University's College of Engineering</strong>. My
-						graduation
-						class is going to be the <strong>Class of 2023</strong>, as I'll most likely be graduating in
-						December 2023.
-					</p>
-
-					<hr />
-
-
-					<h3>💼 Career</h3>
-					</header>
-					<h4>Tinder (June 2021 to August 2021)</h4>
-					<p>In my first summer internship at Tinder, I rebuilt the Open Source Software Screen using Jetpack
-						Compose. This was part of a larger <a
-							href="https://medium.com/tinder/sparking-jetpack-compose-at-tinder-8f15d77eb4da"
-							target="_blank">initiative</a>
-						to migrate the Tinder Android app from legacy Android views to Jetpack Compose.</p>
-					<h4>Tinder (May 2022 to September 2022)</h4>
-					<p>In my second summer internship at Tinder, I worked on 2 main projects.</p>
-					<h4>Nine Hill Technologies (June 2023 to present)</h4>
-					<hr />
-					<h2>Heading Level 2</h2>
-					<h3>Heading Level 3</h3>
-					<h4>Heading Level 4</h4>
-					<h5>Heading Level 5</h5>
-					<h6>Heading Level 6</h6>
-
-					<hr />
-
-					<h4>Blockquote</h4>
-					<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus
-						euismod.
-						Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
-						volutpat ac
-						adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit
-						amet nullam
-						adipiscing eu felis.</blockquote>
-
-					<h4>Preformatted</h4>
-					<pre><code>i = 0;
-
-	while (!deck.isInOrder()) {
-	    print 'Iteration ' + i;
-	    deck.shuffle();
-	    i++;
-	}
-
-	print 'It took ' + i + ' iterations to sort the deck.';
-	</code></pre>
+				<h4>Blockquote</h4>
+				<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus
+					euismod.
+					Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
+					volutpat ac
+					adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit
+					amet nullam
+					adipiscing eu felis.</blockquote>
 				</section>
 
 				<!-- Lists -->
