--- a/funstuff.html
+++ b/funstuff.html
@@ -68,29 +68,44 @@
                         <h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
                             👺 Anime</h3>
                         <div class="accordion-content">
-                            I'm definitely a huge anime fan
+                            <p><b>I'm an avid anime watcher and manga reader. Check me out <a
+                                        href="https://myanimelist.net/profile/shinymo123">here</a> on MyAnimeList.
+                                    Currently, I'm working on a Python tool that looks through your anime list and finds
+                                    the minimum subset of anime voice actors that cover your entire list. In the
+                                    Japanese dub at least, I believe that you can create a list of 20 or so names that
+                                    cover pretty much 99% of animes in the past decade. This code aims to verify that
+                                    fact. It should be the equivalent of the famous NP-complete Vertex Cover
+                                    Problem.</b>
+                            </p>
                         </div>
                     </div>
                     <div class="accordion-item" id="travel">
                         <h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
                             🗺️ Travel</h3>
                         <div class="accordion-content">
-                            Below are some pictures from places that I've been to.
-                            <div class="slideshow-container">
-                                <div class="slideshow"><img src="./images/banff.jpg">
-                                    <img src="./images/dugout.jpg">
-                                    <img src="./images/hangzhou.jpg">
-                                    <a class="prev" href="#">&#10094;</a>
-                                    <a class="next" href="#">&#10095;</a>
-                                </div>
-                            </div>
+                            <p><b>Below are some pictures from places that I've been to.</b></p>
+                            <center><iframe
+                                    src="https://docs.google.com/presentation/d/e/2PACX-1vRlJGNSE6OWKsfFPxteSgnV6Y8Mg8JAWLjAWeZTKbCjFPAGur4wsr5dvzds87YlVL8VGyLaAeWeSiBC/embed?start=true&loop=true&delayms=3000"
+                                    frameborder="0" width="100%" allowfullscreen="true" mozallowfullscreen="true"
+                                    webkitallowfullscreen="true"></iframe></center>
                         </div>
                     </div>
                     <div class="accordion-item" id="music">
                         <h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
                             🎼 Music</h3>
                         <div class="accordion-content">
-                            My favorite music
+                            <p><b>Here are my Spotify Playlists. I don't really have a music genre preference.</b></p>
+                            <p><iframe style="border-radius:12px"
+                                    src="https://open.spotify.com/embed/playlist/4xulxvIj8yIU2xv0d4l6w4?utm_source=generator"
+                                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                                    loading="lazy"></iframe></p>
+
+                            <p><iframe style="border-radius:12px"
+                                    src="https://open.spotify.com/embed/playlist/7Fr8xTpzzjq1gXcfJtxRUF?utm_source=generator"
+                                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                                    loading="lazy"></iframe></p>
                         </div>
                     </div>
                     <div class="accordion-item" id="other">
