--- a/about.html
+++ b/about.html
@@ -219,29 +219,29 @@
 						<h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
 							⚖️ Evaluating Each Skill</h3>
 						<div class="accordion-content">
-							<p><b>With professional and personal experience with these languages, I wanted to provide
-									some
-									thoughts on what I found good and bad about these languages. It's important that I
-									have
-									not used all of these languages to their absolute limit, so these are only my
-									opinion
-									based on projects I've built using them.</b></p>
-							<h4>Kotlin</h4>
-							<p><b>I've mainly used Kotlin while doing Android development, but I'm aware that it is far
-									more powerful than that. I really like its numerous features that make it more
-									readable and type-safe.</b></p>
-							<h4>Java</h4>
-							<b></b>
-							<h4>Rust</h4>
-							<b></b>
-							<h4>OCaml</h4>
-							<b></b>
-							<h4>Python</h4>
-							<b></b>
-							<center><iframe
+							<div class="two-col"><iframe class="col"
 									src="https://docs.google.com/presentation/d/e/2PACX-1vQ1M-6Hx_9Edva6nfgN7aPGXoqCsblsKWbiS-axac66UDCQGHjWszjIohfXbfsXi7lPu4wsXBxVK4xp/embed?start=true&loop=true&delayms=3000"
 									frameborder="0" width="100%" allowfullscreen="true" mozallowfullscreen="true"
-									webkitallowfullscreen="true"></iframe></center>
+									webkitallowfullscreen="true"></iframe>
+								<div>
+									<b>With professional and personal experience with these languages, I wanted to
+										provide
+										some
+										thoughts on what I found good and bad about these languages. It's important
+										that I
+										have
+										not used all of these languages to their absolute limit, so these are only
+										my
+										opinion
+										based on projects I've built using them.</b>
+									<br /> <br />
+									<b>Right now, my favorite language is probably OCaml because the code ends up
+										always being very clean. You can always find an abstract way to make the code
+										shorter and remove duplicate code. I think that functors and monads are very
+										powerful and make the program much more reliable. </b>
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
