--- a/funstuff.html
+++ b/funstuff.html
@@ -68,26 +68,42 @@
                         <h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
                             👺 Anime</h3>
                         <div class="accordion-content">
-                            <p><b>I'm an avid anime watcher and manga reader. Check me out <a
-                                        href="https://myanimelist.net/profile/shinymo123">here</a> on MyAnimeList.
-                                    Currently, I'm working on a Python tool that looks through your anime list and finds
-                                    the minimum subset of anime voice actors that cover your entire list. In the
-                                    Japanese dub at least, I believe that you can create a list of 20 or so names that
-                                    cover pretty much 99% of animes in the past decade. This code aims to verify that
-                                    fact. It should be the equivalent of the famous NP-complete Vertex Cover
-                                    Problem.</b>
-                            </p>
+                            <div class="two-col">
+                                <iframe id="infographic"
+                                    src="https://www.easel.ly/index/embedFrame/easel/14289765"></iframe>
+                                <b>I'm an avid anime watcher and manga reader. Check
+                                    me out <a href="https://myanimelist.net/profile/shinymo123">here</a> on
+                                    MyAnimeList.
+                                    <br /> <br />
+                                    Currently, I'm working on a Python tool that looks through your anime list and
+                                    finds the minimum subset of anime voice actors that cover your entire list. In the
+                                    Japanese dub at least, I believe that you can create a list of 20 or so names
+                                    that cover pretty much 99% of animes in the past decade. This program aims to verify
+                                    that fact. It should be the equivalent of the famous NP-Hard Set Cover Problem.</b>
+                            </div>
                         </div>
                     </div>
                     <div class="accordion-item" id="travel">
                         <h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
                             🗺️ Travel</h3>
                         <div class="accordion-content">
-                            <p><b>Below are some pictures from places that I've been to.</b></p>
-                            <center><iframe
+                            <div class="two-col">
+                                <iframe class="col"
                                     src="https://docs.google.com/presentation/d/e/2PACX-1vRlJGNSE6OWKsfFPxteSgnV6Y8Mg8JAWLjAWeZTKbCjFPAGur4wsr5dvzds87YlVL8VGyLaAeWeSiBC/embed?start=true&loop=true&delayms=3000"
                                     frameborder="0" width="100%" allowfullscreen="true" mozallowfullscreen="true"
-                                    webkitallowfullscreen="true"></iframe></center>
+                                    webkitallowfullscreen="true"></iframe>
+                                <b>Here are some pictures from places that I've been to. Some places that I'm
+                                    planning on going to in the near future:
+                                    <ul>
+                                        <li>Japan</li>
+                                        <li>Jamaica</li>
+                                        <li>Brazil</li>
+                                        <li>Italy</li>
+                                        <li>Australia</li>
+                                        <li>Sichuan, China</li>
+                                    </ul>
+                                </b>
+                            </div>
                         </div>
                     </div>
                     <div class="accordion-item" id="music">
