Add article for fighting game and add gifs for cubing

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,9 @@
             <div class="container">
                 <header class="major">
                     <h2>🛠️ Projects</h2>
+                    <p>Click on the title of each card to go to the source code! Click on the card to read my thoughts
+                        on
+                        the project!</p>
                 </header>
                 <div class="projects reveal">
                     <div class="projectcard">
