--- a/sportsconnect.html
+++ b/sportsconnect.html
@@ -36,6 +36,11 @@
                 <header class="major">
                     <h2>🏆 Sports Connect</h2>
                 </header>
+                <h3>Inspiration</h3>
+                <p>This game is inspired by JM Baseball's <a
+                        href="https://www.youtube.com/playlist?list=PLpXmDLTX2Wt91xQFI0Kc9kerafybJniRO"
+                        target="_blank">MLB Connect</a>
+                    game. I wanted to make the same game but with multiple board sizes and other sports.</p>
             </div>
         </div>
 
