--- a/about.html
+++ b/about.html
@@ -245,7 +245,7 @@
 						</div>
 					</div>
 				</div>
-
+				<!-- 
 				<h4>Blockquote</h4>
 				<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus
 					euismod.
@@ -256,7 +256,6 @@
 					adipiscing eu felis.</blockquote>
 				</section>
 
-				<!-- Lists -->
 				<section>
 					<h3>Lists</h3>
 					<div class="row">
@@ -359,7 +358,6 @@
 					</div>
 				</section>
 
-				<!-- Table -->
 				<section>
 					<h3>Table</h3>
 					<h4>Default</h4>
@@ -453,8 +451,6 @@
 						</table>
 					</div>
 				</section>
-
-				<!-- Buttons -->
 				<section>
 					<h3>Buttons</h3>
 					<ul class="actions">
@@ -489,8 +485,6 @@
 						<li><span class="button disabled">Default</span></li>
 					</ul>
 				</section>
-
-				<!-- Form -->
 				<section>
 					<h3>Form</h3>
 					<form method="post" action="#">
@@ -543,8 +537,6 @@
 						</div>
 					</form>
 				</section>
-
-				<!-- Image -->
 				<section>
 					<h3>Image</h3>
 					<h4>Fit</h4>
@@ -636,8 +628,7 @@
 						gravida
 						sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet
 						nullam.</p>
-				</section>
-
+				</section> -->
 			</div>
 		</div>
 
