--- a/about.html
+++ b/about.html
@@ -37,8 +37,7 @@
 				</header>
 				<div class="accordion">
 					<div class="accordion-item" id="overview">
-						<h3 class="accordion-header active" style="margin: 0; padding: 0;"
-							onclick="toggleAccordion(event)">
+						<h3 class="accordion-header active" onclick="toggleAccordion(event)">
 							👋 Who Am I</h3>
 						<div class="accordion-content active">
 							<b>Hi! My name is Robert Zhao, and I am a 3rd year senior studying Computer Science at
@@ -47,7 +46,7 @@
 						</div>
 					</div>
 					<div class="accordion-item" id="career">
-						<h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
+						<h3 class="accordion-header" onclick="toggleAccordion(event)">
 							💼 Career</h3>
 						<div class="accordion-content">
 							<h4>
@@ -203,7 +202,7 @@
 						</div>
 					</div>
 					<div class="accordion-item" id="interests">
-						<h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
+						<h3 class="accordion-header" onclick="toggleAccordion(event)">
 							✨ Interests</h3>
 						<div class="accordion-content">
 							<h4>Analytics</h4>
@@ -216,7 +215,7 @@
 						</div>
 					</div>
 					<div class="accordion-item" id="opinions">
-						<h3 class="accordion-header" style="margin: 0; padding: 0;" onclick="toggleAccordion(event)">
+						<h3 class="accordion-header" onclick="toggleAccordion(event)">
 							⚖️ Evaluating Each Skill</h3>
 						<div class="accordion-content">
 							<div class="two-col"><iframe class="col"
