--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,8 @@
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/Turn-based-Fighting-Game"
                                 target="_blank">⚔️ Turn-Based
                                 Fighting Game</a></h3>
-                        <p>A turn-based fighting game engine built using OCaml. Customize your games using a
-                            JSON file, and it will load your game as a CLI application.</p>
+                        <p><b>A turn-based fighting game engine built using OCaml. Customize your games using a
+                                JSON file, and it will load your game as a CLI application.</b></p>
                     </div>
 
                     <div class="projectcard">
@@ -54,36 +54,36 @@
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/Sports-Connect"
                                 target="_blank">🏆 Sports
                                 Connect</a></h3>
-                        <p>A Python, web, and Kotlin application that randomly selects pairs of professional
-                            sports teams. As a player, you need to think of players that have played for both
-                            teams (indicated by coordinates in the grid). The web version can be found <a
-                                href="https://sports-connect.vercel.app/" target="_blank">here</a>. </p>
+                        <p><b>A Python, web, and Kotlin application that randomly selects pairs of professional
+                                sports teams. As a player, you need to think of players that have played for both
+                                teams (indicated by coordinates in the grid). The web version can be found <a
+                                    href="https://sports-connect.vercel.app/" target="_blank">here</a>.</b></p>
                     </div>
                     <div class="projectcard">
                         <a href="dbms.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/database-management-system"
                                 target="_blank">🖧 Database Management System</a></h3>
-                        <p>A DBMS built using Java for my CS 4321 database practicum course. I turned this
-                            project into a Gradle project, so we could run Github Actions CI on it. </p>
+                        <p><b>A DBMS built using Java for my CS 4321 database practicum course. I turned this
+                                project into a Gradle project, so we could run Github Actions CI on it.</b></p>
                     </div>
                     <div class="projectcard">
                         <a href="ocr.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCR-App" target="_blank">👁️
                                 OCR App</a>
                         </h3>
-                        <p>An Android application built using Kotlin for the Fall 2020 Cornell AppDev Intro
-                            Course Hackathon. The OCR functionality was implemented by
-                            using the Google Cloud Vision API. My free trial ended, so sadly it is no longer
-                            functional 😥. </p>
+                        <p><b>An Android application built using Kotlin for the Fall 2020 Cornell AppDev Intro
+                                Course Hackathon. The OCR functionality was implemented by
+                                using the Google Cloud Vision API. My free trial ended, so sadly it is no longer
+                                functional 😥.</b></p>
                     </div>
                     <div class="projectcard">
                         <a href="chess.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCaml-Chess-Engine"
                                 target="_blank">♟️ OCaml Chess Engine</a></h3>
-                        <p>A CLI chess application built using OCaml. This was my final project for my CS 3110
-                            functional programming class. We implemented a chess clock using the <a
-                                href="https://ocaml.org/p/conduit-lwt-unix/6.0.0" target="_blank">LWT</a>
-                            library.</p>
+                        <p><b>A CLI chess application built using OCaml. This was my final project for my CS 3110
+                                functional programming class. We implemented a chess clock using the <a
+                                    href="https://ocaml.org/p/conduit-lwt-unix/6.0.0" target="_blank">LWT</a>
+                                library.</b></p>
                     </div>
                     <div class="projectcard">
                         <a href="pokemon.html"></a>
@@ -92,12 +92,13 @@
                             <a href="https://github.com/robertzhao2002/pokemoncatcher" target="_blank">Pokémon
                                 Projects</a>
                         </h3>
-                        <p>A Python script that simulates Pokémon encounters. I also added a basic algorithm to
-                            find the best
-                            natures for any Pokémon based on their base stats. <a
-                                href="https://github.com/robertzhao2002/pokemonkatakanaquiz" target="_blank">Here</a> is
-                            another Pokémon related project I made that quizzes
-                            you on their Japanese names.</p>
+                        <p><b>A Python script that simulates Pokémon encounters. I also added a basic algorithm to
+                                find the best
+                                natures for any Pokémon based on their base stats. <a
+                                    href="https://github.com/robertzhao2002/pokemonkatakanaquiz"
+                                    target="_blank">Here</a> is
+                                another Pokémon related project I made that quizzes
+                                you on their Japanese names.</b></p>
                     </div>
                 </div>
             </div>
