--- a/funstuff.html
+++ b/funstuff.html
@@ -83,16 +83,17 @@
                         <div class="two-col">
                             <iframe id="infographic"
                                 src="https://www.easel.ly/index/embedFrame/easel/14289765"></iframe>
-                            <b>I'm an avid anime watcher and manga reader. Check
-                                me out <a href="https://myanimelist.net/profile/shinymo123" target="_blank">here</a>
-                                on
-                                MyAnimeList.
-                                <br /> <br />
-                                Currently, I'm working on a Python tool that looks through your anime list and
-                                finds the minimum subset of anime voice actors that cover your entire list. In the
-                                Japanese dub at least, I believe that you can create a list of 20 or so names
-                                that cover pretty much 99% of animes in the past decade. This program aims to verify
-                                that fact. It should be the equivalent of the famous NP-Hard Set Cover Problem.</b>
+                            <p><b>I'm an avid anime watcher and manga reader. Check
+                                    me out <a href="https://myanimelist.net/profile/shinymo123" target="_blank">here</a>
+                                    on
+                                    MyAnimeList.
+                                    <br /> <br />
+                                    Currently, I'm working on a Python tool that looks through your anime list and
+                                    finds the minimum subset of anime voice actors that cover your entire list. In the
+                                    Japanese dub at least, I believe that you can create a list of 20 or so names
+                                    that cover pretty much 99% of animes in the past decade. This program aims to verify
+                                    that fact. It should be the equivalent of the famous NP-Hard Set Cover Problem.</b>
+                            </p>
                         </div>
                     </div>
                 </div>
